Adds angular material components and a custom theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="titlebar"></div>
-<router-outlet></router-outlet>
+<div class="app-container">
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" (click)="drawer.toggle()" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>My App</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>
+  </mat-toolbar>
+  <mat-drawer-container class="drawer-container">
+    <mat-drawer class="drawer-content" #drawer mode="over">
+      <div class="menu-item" (click)="navigate('characters')">Initiative Tracker</div>
+      <div class="menu-item" (click)="navigate('add')">Add Character</div>
+    </mat-drawer>
+    <mat-drawer-content><router-outlet></router-outlet></mat-drawer-content>
+  </mat-drawer-container>
+  <div class="footer-container"></div>
+</div>
