--- a/src/app/character-form/character-form.component.html
+++ b/src/app/character-form/character-form.component.html
@@ -2,5 +2,5 @@
   <input [(ngModel)]="player" placeholder="Player Name">
   <input [(ngModel)]="character" placeholder="Character Name">
   <input [(ngModel)]="initiative" placeholder="Initiative">
-  <button (click)="saveCharacter()">Save</button>
+  <button mat-raised-button color="accent" (click)="saveCharacter()">Save</button>
 </div>
