--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,6 +2,106 @@ $base-color: #624CAB;
 
 //https://www.canva.com/colors/color-palettes/emerald-entrance/
 $tan: #B68D40;
-$cream: #F4EBD0;
+$cream: #f4ebd0;
 $charcoal: #122620;
 $gold: #D6AD60;
+
+$mat-charcoal: (
+    50 : #e3e5e4,
+    100 : #b8bebc,
+    200 : #899390,
+    300 : #596763,
+    400 : #364741,
+    500 : #122620,
+    600 : #10221c,
+    700 : #0d1c18,
+    800 : #0a1713,
+    900 : #050d0b,
+    A100 : #52ffd2,
+    A200 : #1fffc4,
+    A400 : #00ebad,
+    A700 : #00d19a,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$mat-cream: (
+    50 : #fefdf9,
+    100 : #fcf9f1,
+    200 : #faf5e8,
+    300 : #f7f1de,
+    400 : #f6eed7,
+    500 : #f4ebd0,
+    600 : #f3e9cb,
+    700 : #f1e5c4,
+    800 : #efe2be,
+    900 : #ecddb3,
+    A100 : #ffffff,
+    A200 : #ffffff,
+    A400 : #ffffff,
+    A700 : #ffffff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$mat-tan: (
+    50 : #f6f1e8,
+    100 : #e9ddc6,
+    200 : #dbc6a0,
+    300 : #ccaf79,
+    400 : #c19e5d,
+    500 : #b68d40,
+    600 : #af853a,
+    700 : #a67a32,
+    800 : #9e702a,
+    900 : #8e5d1c,
+    A100 : #ffe6c8,
+    A200 : #ffce95,
+    A400 : #ffb762,
+    A700 : #ffab48,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
